[package]
name = "wifilocate"
version = "0.1.3"
authors = ["Brian Vuku <vukubrian@gmail.com>"]
description = "Get your gps location from wifi networks"
repository = "https://github.com/brayo-pip/wifilocate"
keywords = ["wifi", "location", "gps", "gcloud"]
license = "MIT"
edition = "2021"
readme = "README.md"

[dependencies]
wifi_scanner = "0.5.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128" 
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.38", features = ["full"] }
dirs = "5.0.1"
serde_yaml = "0.9.34"

